# lores-chat-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: api.rs  main.rs  panda_client.rs  realtime.rs  static_server.rs
frontend/: .release-it.json  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  identity.js
frontend/src/components/: MessageList.jsx  MessageSender.jsx  RegionSelector.jsx  ServerIndicator.jsx  SubscribeError.jsx  UserIdentity.jsx
