[package]
name = "lores-chat-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"